array.island.Island.scala.error
Compilation error:
Island:4: error: '=' expected but ';' found.
  for (k <- 1 to num.length){   
^